Fix misaligned buttons

--- a/packages/style/scss/pagination.scss
+++ b/packages/style/scss/pagination.scss
@@ -60,9 +60,9 @@
       transform: rotate(90deg);
     }
 
-    .icon-arrow-outline::before {
+    .icon-arrow-outline {
       display: inline-block;
-      transform: rotate(180deg);
+      transform: rotateY(180deg);
     }
   }
 
